2007-02-25  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/mol.cpp: OBMol::DeleteBond()
	_vbond.erase(_vbond.begin() + bond->GetIdx());
	Since _vbond indices start at 0 and bond->Getdidx() indices start at
	1, the line is replaced by:
	_vbond.erase(_vbond.begin() + bond->GetIdx() - 1);

2007-02-25  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* include/openbabel/forcefield.h: comment out Description() (comply
	with new pluginiter).

	* obmm, obenergy, obminimize, obgen: comment out the use of
	Description().

2007-02-25 Chris Morley

	* windows-vc2005/OpenBabelDLL: Updated OpenBabelDLL.vcproj.
	Temporarily added OpenBabelDLL.dll and OpenBabelDLL.lib
	(without forcefield)
	
	* include/openbabel/kinetics.h, lineend.h, pluginiter.h:
	documentation changes.
	
2007-02-25  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/ring.cpp: Added a check in FindRings to make sure the depth is
	not larger than the number of atoms we have. (see mailing list)

2007-02-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Added ConjugateGradientsInitialize() and
	ConjugateGradientsTakeNSteps(). ConjugateGradients() still exists and
	uses these two new function.
	Idem for SteepestDescent.

2007-02-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>
	
	* src/mol.cpp: changes OBMol::NewBond, fixes PR#1666785. AddBond() was
	resizing the _vbond vector and NewBond() used push_back to add items.
	This created a gap bewteen the bonds added by NewBond() and AddBond().
	The FOR_BONDS_OF_MOL iterator expects all bonds to be at the begin of
	the vector. Note: this also fixes the initial problem with the
	OBAngleData and OBTorsionData.

	* test/addhydrogens.cpp: added/deleted... (was used for debugging)

	* src/forcefield.cpp: changes "*logos << ..." to OBFFLog(...)

	* src/forcefields/forcefieldghemical.cpp: changes "*logos << ..." to 
	OBFFLog(...)

2007-02-23  Tim Vandermeersch <tim.vandermeersch@gmail.com>
	