@@ -1,3 +1,9 @@
+2007-02-25  Geoffrey Hutchison  <babel@geoffhutchison.net>
+
+	* src/ring.cpp (FindRings): Don't return early if all atoms are
+	visited. Some atoms may be in multiple rings and will be visited
+	more than once on a graph traversal.
+
 2007-02-25  Tim Vandermeersch <tim.vandermeersch@gmail.com>
 
 	* src/mol.cpp: OBMol::DeleteBond()
